fix css overflow-y bug

--- a/sashimi-manager/src/index.css
+++ b/sashimi-manager/src/index.css
@@ -15,3 +15,14 @@
   font-family: 'cabin, serif';
   font-size: 14px;
 }
+
+.container {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.container::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
+}
